--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </p>
     </section>
     <section class="about" id="achievements">
-        <h2>Achievemnets</h2>
+        <h2>Achievements</h2>
         <p>
             <ul>
                 <li>Winner: First Place in the Inter-Collegiate Circuit Design Competition</li>
